<resources>
    <string name="app_name">Profile Sekolah App</string>
    <string name="npsn">NPSN</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="text_spinner">Sekolah</string>
    <string name="button_register">Sign Up</string>
    <string name="button_login">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="have_account">"Already have account? Sign In"</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="isi_spinner">
        <item>opsi1</item>
        <item>opsi2</item>
        <item>opsi3</item>
    </string-array>

</resources>
