<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/form_npsn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/npsn"/>

    <EditText
        android:id="@+id/form_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/form_npsn"/>

    <TextView
        android:id="@+id/text_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:paddingStart="5dp"
        android:text="@string/text_spinner"
        android:layout_below="@id/form_nama"/>

    <Spinner
        android:id="@+id/form_sekolah"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/text_spinner"/>


    <EditText
        android:id="@+id/form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/form_sekolah" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/button_register"
        android:layout_below="@id/form_password"/>

</RelativeLayout>



















